...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xCB-zM-W8U">
                                                <rect key="frame" x="0.0" y="21" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="celsiusTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                            </textField>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <constraints>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FhI-Eb-Bnw">
                                                <rect key="frame" x="0.0" y="21" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="fahrenheitTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <constraints>
...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9yR-Pe-bns" userLabel="Row4">
                                        <rect key="frame" x="0.0" y="263" width="352" height="99"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uUY-9n-ImF">
                                                <rect key="frame" x="123" y="35" width="106" height="29.5"/>
                                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                                <state key="normal" title="Convertir">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="convertir:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hHw-CI-UkC"/>
                                                </connections>
                                            </button>
...
